--- a/tabela-de-distancia.html
+++ b/tabela-de-distancia.html
@@ -12,11 +12,51 @@
     <h1>Site Limeira</h1>
     </header>
     <main>
-      <h2>Tabela de distancia</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Tempore tenetur consequatur est doloribus</p>
-     <section class="grid-home">      
-
+      <h2>Tabela de distancia:</h2>
+      <p></p>
+     <section class="tabelas">      
+        <table>
+            <thead>
+                <tr>
+                    <th>Cidades</th>
+                    <th>Distância em KM</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Campinas</td>
+                    <td>52km</td>
+                </tr>
+                <tr>
+                    <td>Araras</td>
+                    <td>30-40km</td>
+                </tr>
+                <tr>
+                    <td>Piracicaba</td>
+                    <td>30-40km</td>
+                </tr>
+                <tr>
+                    <td>Rio Claro</td>
+                    <td>50-60km</td>
+                </tr>
+                <tr>
+                    <td>Americana</td>
+                    <td>15-20km</td>
+                </tr>
+                <tr>
+                    <td>Santa Bárbara</td>
+                    <td>15-20km</td>
+                </tr>
+                <tr>
+                    <td>Artur Nogueira</td>
+                    <td>20-30km</td>
+                </tr>
+                <tr>
+                    <td>Cosmópolis</td>
+                    <td>20-30km</td>
+                </tr>
+            </tbody>
+        </table>
      </section>
 
         <section class="voltar">
