--- a/comercio-local.html
+++ b/comercio-local.html
@@ -13,12 +13,11 @@
     </header>
     <main>
       <h2>Comercio local</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Tempore tenetur consequatur est doloribus</p>
-     <section class="grid-home">      
+     <section class="comercio">
 
-     </section>
+    <iframe src="https://www.youtube.com/embed/VnB3OGKUphE?si=3oFCMHBe5vqnqB4i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+    </section>
         <section class="voltar">
             <a href="index.html"><i class="bi bi-arrow-bar-left">Voltar</i></a>
         </section>
