--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <main>
     <section>
       <h2>Bem-vindo ao site Limeira</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Tempore tenetur consequatur est doloribus, dolores corporis et aspernatur voluptatum architecto voluptate.
-        Iusto labore consequatur molestiae laborum velit pariatur temporibus adipisci dicta?</p>
+      <p>Neste site, você encontrará várias informações sobre Limeira, como a sua história, localização, pontos turísticos, comércio local e outras curiosidades sobre este maravilhoso município... Seja bem-vindo!
+</p>
         </section>
      <section class="grid-home">      
         <a href="sobre-o-municipio.html">
@@ -68,14 +67,11 @@
      </section>
         <h2>Nossa redes sociais</h2>
         <section class="redes-sociais">
-
-                <div>
             <a href="https://facebook.com" target="_blank"><i class="bi bi-facebook">Facebook</i></a>
             <a href="https://Instagram.com" target="_blank"><i class="bi bi-instagram">Intagram</i></a>
             <a href="https://TikTok.com" target="_blank"><i class="bi bi-tiktok">TikTok</i></a> 
             <a href="https://Youtube.com" target="_blank"><i class="bi bi-youtube">YouTube</i></a>
             <a href="https://whatsapp.com" target="_blank"> <i class="bi bi-whatsapp"></i>whatsapp</a>
-            </div>
         </section>
 
     </main>
