--- a/comercio-local.html
+++ b/comercio-local.html
@@ -15,7 +15,42 @@
       <h2>Comercio local</h2>
      <section class="comercio">
 
-    <iframe src="https://www.youtube.com/embed/VnB3OGKUphE?si=3oFCMHBe5vqnqB4i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>Limeira shopping: Av. Carlos Kuntz Busch, 800 - Parque Egisto Ragazzo, Limeira - SP, 13485-346</p>
+         <div class="com1"> 
+         <iframe src="https://www.youtube.com/embed/VnB3OGKUphE?si=3oFCMHBe5vqnqB4i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+         <ul>
+            <li>Inaugurado em 22 de novembro de 2012, situado às margens da Rodovia Anhanguera (km 150,5), com fácil acesso pelo anel viário</li>
+            <li>Área total de 23.208 m², contando com 6 lojas-âncora, 7 megalojas, 102 espaços comerciais, 5 salas de cinema (3 em 2D e 2 em 3D) e uma praça de alimentação completa </li>
+            <li>Estacionamento com aproximadamente 1.100 vagas, incluindo acessibilidade (deficientes, idosos, pessoas autistas), fraldário e Wi‑Fi gratuito</li>
+            <li>Conta também com áreas como Detran/SP e Poupatempo, facilitando serviços públicos</li>
+         </ul>
+         </div>
+
+         <P>Mercados e Mercearias mais relevantes de Limeira:</P>
+         <div class="com2">
+            <ul>
+                <li>Covabra Supermercados
+                    <p>Rede consolidada na região com grande variedade de produtos</p>
+                </li>
+
+                <li>Savegnago
+                    <p>Supermercado moderno, presente em local estratégico </p>
+                </li>
+
+                <li>Sempre Vale
+                    <p>Rede regional tradicional, com destaque para a unidade do Centro </p>
+                </li>
+
+                <li>Coruja Supermercado
+                    <p>Conhecido por sua organização e atendimento atencioso no bairro Vila Rocha</p>
+                </li>
+
+                <li>Supermercado Zomper
+                    <p>Rede local bem avaliada, com loja no Jardim Caieira</p>
+                </li>
+            </ul>
+
+         </div>
 
     </section>
         <section class="voltar">
