--- a/localizacao.html
+++ b/localizacao.html
@@ -14,16 +14,16 @@
     <main>
         <!-- Tempore tenetur consequatur est doloribus</p> -->
      <section class="localizacao">  
+         <h2>Localização:</h2>  
 
-        <div>
-              <h2>Localização:</h2>  
-              <p>Limeira</p>  
+        <div class="l1">
+              <p>Limeira é uma cidade do interior de São Paulo, localizada a cerca de 150 km da capital. Fica numa região elevada, com 588 metros de altitude, e ocupa uma área de mais de 580 km². É bem conectada por grandes rodovias, como a Anhanguera e a Bandeirantes, o que facilita o transporte de pessoas e mercadorias. Por estar próxima de cidades como Campinas e Piracicaba, Limeira faz parte de uma região importante para a economia paulista. Tudo isso faz dela um ponto estratégico para a indústria, o comércio e a logística no estado.</p>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d117896.2550665596!2d-47.49373284107186!3d-22.56945296095562!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c880ecaee30113%3A0xd333475dd751788f!2sLimeira%20-%20State%20of%20S%C3%A3o%20Paulo!5e0!3m2!1sen!2sbr!4v1749766382031!5m2!1sen!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-        <div>
+        <div class="l2">
         <h2>Ponto relevante da cidade:</h2>
-        <p>Gruta da paz</p>
+        <p>Gruta:R. Carlos Gomes - Centro, Limeira - SP, 13480-201 </p>
 <iframe src="https://www.google.com/maps/embed?pb=!3m2!1sen!2sbr!4v1749766564702!5m2!1sen!2sbr!6m8!1m7!1s05PPH7hM0wROISSNhLF12w!2m2!1d-22.56450230001763!2d-47.40168853398236!3f346.47199861297065!4f-7.121770874379337!5f0.7820865974627469"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
