--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
     </header>
     <main>
-    <section>
+    <section class="descricao">
       <h2>Bem-vindo ao site Limeira</h2>
       <p>Neste site, você encontrará várias informações sobre Limeira, como a sua história, localização, pontos turísticos, comércio local e outras curiosidades sobre este maravilhoso município... Seja bem-vindo!
 </p>
@@ -63,6 +63,7 @@
             <h3>Esporte</h3>
             <p>vídeos das principais modalidades esportivas no município.</p>
         </div>
+
         </a>
      </section>
         <h2>Nossa redes sociais</h2>
