--- a/pontos-turisticos.html
+++ b/pontos-turisticos.html
@@ -22,7 +22,7 @@
         </div>
 
         <h2>Hípica:</h2>
-        <div>
+        <div class="reverter">
         <p>Um dos espaços mais queridos pelos limeirenses, o Parque Cidade é ideal para passeios em família, prática de esportes ou simplesmente para relaxar ao ar livre. Conta com ciclovias bem sinalizadas, pista de caminhada arborizada, aparelhos de ginástica ao ar livre e diversos playgrounds para crianças. O lago central é um dos pontos de destaque do parque, onde é possível observar aves e aproveitar a paisagem.</p>
         <img src="imagens/turistico2.jpeg" alt="">
         </div>
@@ -36,7 +36,7 @@
         </div>
 
         <h2>Catedral nossa senhora das dores:</h2>
-        <div>
+        <div class="reverter">
         <p>Considerada o coração religioso de Limeira, a Catedral Nossa Senhora das Dores é um dos marcos históricos e culturais mais importantes da cidade. Fundada em 1826, ela foi construída junto com a formação do antigo povoado que originou Limeira. A atual edificação, imponente e bem preservada, é o terceiro templo no local e combina linhas clássicas com elementos modernos.</p>
         <img src="imagens/turistico4.jpeg" alt="">
         </div>
