--- a/sobre-o-municipio.html
+++ b/sobre-o-municipio.html
@@ -19,9 +19,9 @@
         <div class="m1">  
         <img src="imagens/municipio1.jpg" alt="">
         <p>Limeira é uma cidade do interior do estado de São Paulo, fundada oficialmente em 1863. Sua origem remonta às primeiras décadas do século XIX, quando começou a se desenvolver como um importante ponto de passagem de tropeiros. Durante o período do café, Limeira teve papel fundamental como produtora e exportadora, sendo chamada de "Cidade da Laranja" no início do século XX por sua forte produção cítrica.
-Com o passar do tempo, a cidade se industrializou e diversificou sua economia, mantendo um crescimento constante e atraindo investimentos.</p>
-        </div>
-        <p>Sua história é marcada por contribuições importantes na agricultura, indústria e, mais recentemente, em setores como joalheria e tecnologia.</p>
+Com o passar do tempo, a cidade se industrializou e diversificou sua economia, mantendo um crescimento constante e atraindo investimentos. Sua história é marcada por contribuições importantes na agricultura, indústria e</p>
+</div>
+<p>, mais recentemente, em setores como joalheria e tecnologia.</p>
 
         <div class="m2">
         <p>Limeira possui uma economia forte e diversificada. Um de seus principais destaques é o setor industrial, especialmente o polo metalúrgico e de autopeças. Além disso, a cidade é nacionalmente reconhecida como um dos maiores centros de produção de semijoias e bijuterias, exportando para diversos países.
@@ -33,12 +33,11 @@ A agricultura ainda tem espaço na economia local, com destaque para a produçã
     <div class="m3">
        <img src="imagens/municipio3.jpeg" alt="">
         <p>Limeira valoriza sua cultura e oferece diversas opções de lazer e conhecimento. Um dos principais espaços da cidade é o Parque Cidade, que conta com amplas áreas verdes, pistas de caminhada, lagos e espaços para eventos. É ideal para atividades esportivas, passeios em família e contato com a natureza, além de receber shows e programações culturais ao longo do ano.
-Outro ponto de destaque é a Praça Toledo Barros, localizada no centro, rodeada por construções antigas e áreas arborizadas. Muito frequentada pelos moradores, a praça abriga eventos cívicos, manifestações artísticas e apresentações 
+Outro ponto de destaque é a Praça Toledo Barros, localizada no centro, rodeada por construções antigas e áreas arborizadas. Muito frequentada pelos moradores, a praça abriga eventos cívicos, manifestações artísticas e apresentações musicais, mantendo viva a tradição cultural da cidade.
         </p>
     </div>
-            <p>musicais, mantendo viva a tradição cultural da cidade.
-O Museu Histórico e Pedagógico Major José Levy Sobrinho também se destaca na preservação da memória de Limeira. Seu acervo inclui documentos, objetos e fotos antigas que retratam a história local. Além das exposições, o museu promove oficinas, palestras e atividades educativas.
-        </p>
+<p>
+O Museu Histórico e Pedagógico Major José Levy Sobrinho também se destaca na preservação da memória de Limeira. Seu acervo inclui documentos, objetos e fotos antigas que retratam a história local. Além das exposições, o museu promove oficinas, palestras e atividades educativas.</p>
         </section>
 
         <section class="voltar">
